--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,9 +11,14 @@
 <body>
   <h1>Michael Kim</h1>
   <p>Welcome to my website!</p>
+  <ul>Test 1</ul>
+  <ul>Test 2</ul>
+  <ul>Test 3</ul>
+
   <!--
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" /> 
   -->
+
 </body>
 
 </html>
