added discs to list

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
   <h1>Michael Kim</h1>
   <p>Welcome to my website!</p>
-  <ul>Test 1</ul>
-  <ul>Test 2</ul>
-  <ul>Test 3</ul>
+  <ul style="list-style-type:disc;"></ul>
+    <li>Test 1</li>
+    <li>Test 2</li>
+    <li>Test 3</li>
+  </ul>
 
   <!--
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" /> 
