Added more stuff

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Michael Kim Website</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <h1>Michael Kim</h1>
-  <p>Welcome to my website!</p>
+  <p>647-527-5748 | michaelkimwork47@gmail.com | linkedin.com/in/michael-jh-kim | github.com/michaeljhkim | https://michaeljhkim.github.io/ </p>
+  
+  <h1>Education</h1>
   <ul>
     <li>Test 1</li>
     <li>Test 2</li>
