Significantly improved design. Added headers and added more content

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--
+For basic testing, just run the HTML directly in your browser. Firefox is what I use
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,14 +14,73 @@
 
 <body>
   <h1>Michael Kim</h1>
-  <p>647-527-5748 | michaelkimwork47@gmail.com | linkedin.com/in/michael-jh-kim | github.com/michaeljhkim | https://michaeljhkim.github.io/ </p>
+  <p>647-527-5748 | michaelkimwork47@gmail.com | 
+    <a href="linkedin.com/in/michael-jh-kim">linkedin.com/in/michael-jh-kim</a> | 
+    <a href="https://github.com/michaeljhkim">github.com/michaeljhkim</a> | 
+    <a href="https://michaeljhkim.github.io/ ">michaeljhkim.github.io/ </a> 
+  </p>
   
-  <h1>Education</h1>
+  <h2>Education</h2>
+  <hr>
+  <h3 class="subheading"> McMaster University </h3>
+  <h3 class="subheading1"> <i>Bachelors Computer Science Co-op</i> </h3>
+  <ul></ul>
+
+
+  <!--
+  EXPERIENCE SECTIONS
+  -->
+  <header>
+    <h2>Experience</h2>
+    <hr>
+    <h3 class="subheading"> Swimming Instructor </h3>
+    <h3 class="subheading1"> <i>Elgin West Recreational Centre</i> </h3>
+  </header>
   <ul>
-    <li>Test 1</li>
-    <li>Test 2</li>
-    <li>Test 3</li>
+    <li>Helped younger children how to swim</li>
+    <li>Coordinated teaching efforts with several other instructiors</li>
   </ul>
+  
+
+  <!--
+  PROJECTS SECTIONS
+  -->
+  <header>
+    <h2>Projects</h2>
+    <hr>
+    <h3 class="subheading"> GDSC Hackathon Finalist | Python, React </h3>
+  </header>
+  <ul>
+    <li>Integrated Google Maps into Open AI’s gpt-3.5</li>
+    <li>Use Google’s Firebase API to create and store chat logs</li>
+    <li>Combined 3 different models in order to focus main AI on mental healthcare</li>
+    <li>Added the ability for gpt-3.5 to detect and suggest at least 5 or more locations depending on user response</li>
+    <li>Created a frontend website to showcase the final product</li>
+  </ul>
+
+
+  <header>
+    <h3 class="subheading"> Personal Website | HTML, CSS, Javascript </h3>
+  </header>
+  <ul>
+    <li>Built a website using HTML without a template, hosting it on github for easy and free access</li>
+    <li>Wrote custom CSS style sheet in order to present page information in a simple, but organized manner</li>
+    <li>Ensured the website’s code was well-organized and easy to maintain, adhering to best practices in web development for readability and future scalability</li>
+  </ul>
+
+
+  <header>
+    <h3 class="subheading"> Brutal Doom | C, Zscript, Git </h3>
+  </header>
+  <ul>
+    <li>Integrated Google Maps into Open AI’s gpt-3.5</li>
+    <li>Use Google’s Firebase API to create and store chat logs</li>
+    <li>Combined 3 different models in order to focus main AI on mental healthcare</li>
+    <li>Added the ability for gpt-3.5 to detect and suggest at least 5 or more locations depending on user response</li>
+    <li>Created a frontend website to showcase the final product</li>
+  </ul>
+
+
 
   <!--
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" /> 
