--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ For basic testing, just run the HTML directly in your browser. Firefox is what I
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Michael Kim Website</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
