Not much new concepts, just more added on

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@ For basic testing, just run the HTML directly in your browser. Firefox is what I
     <a href="https://github.com/michaeljhkim">github.com/michaeljhkim</a> | 
     <a href="https://michaeljhkim.github.io/ ">michaeljhkim.github.io/ </a> 
   </p>
-  
+
+
+  <!--
+  EDUCATION SECTIONS
+  -->
   <h2>Education</h2>
   <hr>
   <h3 class="subheading"> McMaster University </h3>
@@ -48,7 +52,7 @@ For basic testing, just run the HTML directly in your browser. Firefox is what I
   <header>
     <h2>Projects</h2>
     <hr>
-    <h3 class="subheading"> GDSC Hackathon Finalist | Python, React </h3>
+    <h3 class="subheading"> GDSC Hackathon Finalist | <i>Python, React, Git</i> </h3>
   </header>
   <ul>
     <li>Integrated Google Maps into Open AI’s gpt-3.5</li>
@@ -60,7 +64,7 @@ For basic testing, just run the HTML directly in your browser. Firefox is what I
 
 
   <header>
-    <h3 class="subheading"> Personal Website | HTML, CSS, Javascript </h3>
+    <h3 class="subheading"> Personal Website | <i>HTML, CSS, Javascript, Git</i> </h3>
   </header>
   <ul>
     <li>Built a website using HTML without a template, hosting it on github for easy and free access</li>
@@ -70,7 +74,7 @@ For basic testing, just run the HTML directly in your browser. Firefox is what I
 
 
   <header>
-    <h3 class="subheading"> Brutal Doom | C, Zscript, Git </h3>
+    <h3 class="subheading"> Brutal Doom | <i>C, Zscript, Git</i> </h3>
   </header>
   <ul>
     <li>Integrated Google Maps into Open AI’s gpt-3.5</li>
@@ -79,6 +83,36 @@ For basic testing, just run the HTML directly in your browser. Firefox is what I
     <li>Added the ability for gpt-3.5 to detect and suggest at least 5 or more locations depending on user response</li>
     <li>Created a frontend website to showcase the final product</li>
   </ul>
+
+
+  <header>
+    <h3 class="subheading"> Deus Ex Modernization Update | <i>C++, Unrealscript, Git</i> </h3>
+  </header>
+  <ul>
+    <li>Successfully addressed and resolved in-game cutscene subtitle issues, demonstrating a commitment to enhancing the user experience</li>
+  </ul>
+
+
+  <header>
+    <h3 class="subheading">   Java Adventure Game | <i>Java, Swing, Git</i> </h3>
+  </header>
+  <ul>
+    <li>Spearheaded the development of a Java Swing-based text adventure game from inception to execution</li>
+    <li>Demonstrated proficiency in Java Swing to design and implement an intuitive and responsive button interface that seamlessly integrates with the overall game framework</li>
+  </ul>
+  
+
+  <!--
+  TECHNICAL SKILLS SECTIONS
+  -->
+  <header>
+    <h2>Technical Skill</h2>
+    <hr>
+    <h4> Languages: Java, Python, C/C++, SQL, JavaScript, HTML/CSS </h4>
+    <h4> Frameworks: React, Node.js </h4>
+    <h4> Developer Tools: Git, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse </h4>
+    <h4> Libraries: pandas, NumPy, Matplotlib </h4>
+  </header>
 
 
 
