Finished basic website

--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@ For basic testing, just run the HTML directly in your browser. Firefox is what I
     <h4> Developer Tools: Git, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse </h4>
     <h4> Libraries: pandas, NumPy, Matplotlib </h4>
   </header>
+  
+
+  <!--
+  ACTIVITIES & INTERESTS SECTIONS
+  -->
+  <header>
+    <h2>Activities and Interest</h2>
+    <hr>
+    <h4> Activities: Google Developer Student Clubs, McMaster Film Club, McMaster Game Development Club </h4>
+    <h4> Interests: Playing tennis, table tennis, gaming, reading, viewing films </h4>
+  </header>
 
 
 
