Testing with javascript

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ For basic testing, just run the HTML directly in your browser. Firefox is what I
 </head>
 
 <body>
+  <script src=test.js></script>
+
   <h1>Michael Kim</h1>
   <p>647-527-5748 | michaelkimwork47@gmail.com | 
     <a href="linkedin.com/in/michael-jh-kim">linkedin.com/in/michael-jh-kim</a> | 
