Update index.html - Fixed BD description
I accidentally copied the description for my hackathon in the BD section

--- a/index.html
+++ b/index.html
@@ -79,13 +79,11 @@ For basic testing, just run the HTML directly in your browser. Firefox is what I
     <h3 class="subheading"> Brutal Doom | <i>C, Zscript, Git</i> </h3>
   </header>
   <ul>
-    <li>Integrated Google Maps into Open AI’s gpt-3.5</li>
-    <li>Use Google’s Firebase API to create and store chat logs</li>
-    <li>Combined 3 different models in order to focus main AI on mental healthcare</li>
-    <li>Added the ability for gpt-3.5 to detect and suggest at least 5 or more locations depending on user response</li>
-    <li>Created a frontend website to showcase the final product</li>
+    <li>Played a crucial role as both coder and designer in the development of the globally renowned Brutal Doom mod5</li>
+    <li>Identified and resolved 17 persistent bugs, resulting in a significant 5\% improvement in overall game performance</li>
+    <li>Innovatively designed and implemented a modular screen effect system, improving code clarity and execution efficiency</li>
+    <li>Led quality assurance efforts, ensuring thorough testing and resolution of bugs to maintain Brutal Doom's stability and excellence</li>
   </ul>
-
 
   <header>
     <h3 class="subheading"> Deus Ex Modernization Update | <i>C++, Unrealscript, Git</i> </h3>
